# codecrafters-interpreter-rust

./: Cargo.toml  README.md
src/: interpreter.rs  lexer.rs  main.rs  parser.rs
src/interpreter/: error.rs  tests.rs
src/lexer/: error.rs  tests.rs
src/parser/: error.rs  tests.rs
src/parser/snapshots/: codecrafters_interpreter__parser__tests__assignment.snap  codecrafters_interpreter__parser__tests__binary_complex.snap  codecrafters_interpreter__parser__tests__block.snap  codecrafters_interpreter__parser__tests__block2.snap.new  codecrafters_interpreter__parser__tests__mix.snap  codecrafters_interpreter__parser__tests__print.snap  codecrafters_interpreter__parser__tests__print2.snap  codecrafters_interpreter__parser__tests__print4.snap  codecrafters_interpreter__parser__tests__print4.snap.new  codecrafters_interpreter__parser__tests__var.snap  codecrafters_interpreter__parser__tests__var2.snap
